project pillar updated and team page updated

--- a/team/index.html
+++ b/team/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-
+    
     <section class="flex-center">
         <div class="slide-bg" data-parallax>
             <video id="myVideo" src="gallery/teamvid.mp4" loop muted autoplay></video>
         </div>
+        
         <div class="slide-data flex-center flex-col">
-            <a href="../index.html">
+            <a class="flex-center" href="../index.html">
             <img class="logo-ecell" src="gallery/e_cell_logo.png" alt="logo">
             </a>
             <!-- <h1>E-CELL SAKEC</h1> -->
@@ -38,39 +39,7 @@
         <!--heading---->
         <strong class="team-heading">Our Team</strong>
         <!--team-container---------->
-        <div class="milind">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="gallery/teamphotos/ashish2.png">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--name-->
-                    <a href="#" class="detail-name">Milind Sir</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                        <!--facebook-->
-                        <!-- <a href="#" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a> -->
-                        <!--instagram-->
-                        <a href="https://instagram.com/mrashishshetty" target="_blank">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                        <!-- linkedin -->
-                        <a href="https://in.linkedin.com/in/mrashishshetty" target="_blank">
-                            <ion-icon name="logo-linkedin"></ion-icon>
-                        </a>
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its
-                        possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves
-                        leading projects with full stack development skills on the side. Share your ideas with him
-                        and he will make it happen.</p>
-                </div>
-            </div>
-        </div>
+
         <div class="team-box-container">
             <!--member-box-1--->
             <div class="member-box member-1">
