--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -18,7 +18,9 @@
     <nav id="nav">
         <div id="nav-header" class="nav-header">
             <div class="logo">
+                <a href="../index.html">
                 <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
+            </a>
             </div>
             <div id="toggle" class="nav-toggle">
                 <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
