improvements to contact us form

--- a/index.html
+++ b/index.html
@@ -221,22 +221,22 @@
                 </div>
                 <div class="contact-form">
                     <form action="https://zbba6bfl4k.execute-api.ap-south-1.amazonaws.com/dev/contact/" method="POST">
-                        <input class="form-input animate__animated wow animate__fadeIn" id="name" type="text" for="name"
+                        <input class="form-input" id="name" type="text" for="name"
                             placeholder="Name" required>
                         <!-- <label for="name" class="form-label">Name</label> -->
-                        <input class="form-input animate__animated wow animate__fadeIn" id="email" type="email"
+                        <input class="form-input" id="email" type="email"
                             for="email" placeholder="Email" required>
                         <!-- <label for="email" class="form-label">Email</label> -->
-                        <input class="form-input animate__animated wow animate__fadeIn" id="subject" type="text"
-                            for="subject" placeholder="Subject" required>
-                        <!-- <label for="subject" class="form-label">Subject</label> -->
-                        <textarea class="form-inputarea animate__animated wow animate__fadeIn" id="message" type="text"
+                        <textarea class="form-inputarea" id="message" type="text"
                             for="message" placeholder="Message" required></textarea>
                         <!-- <label for="message" class="form-label">Message</label> -->
-                        <div id="recaptcha" class="g-recaptcha animate__animated wow animate__fadeIn "
+                        <div id="recaptcha" class="g-recaptcha"
                             data-sitekey="6Lekeo0gAAAAANQn_eAw4gHugk-P_V8sdFex94e9"></div>
-                        <button class="contact-form-button animate__animated wow animate__fadeIn" id="submitbtn"
-                            name="submit" type="button">Submit</button>
+                        <button class="contact-form-button" id="submitbtn" name="submit" type="button" >
+                            Submit
+                        </button>
+                        
+
                     </form>
                 </div>
             </div>
