--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -19,7 +19,7 @@
         <div id="nav-header" class="nav-header">
             <div class="logo">
                 <a href="../index.html">
-                <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
+                <img src="/src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
             </a>
             </div>
             <div id="toggle" class="nav-toggle">
@@ -153,7 +153,7 @@
                 <!-- Pre Registration -->
                 <div class="row row-1">
                     <div class="icons icons-1">
-                        <img src="./src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-1" data-aos-delay="70" data-aos-duration="800">
                         <div class="details">
@@ -173,7 +173,7 @@
                 <!-- Verification -->
                 <div class="row row-2">
                     <div class="icons icons-2">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-2" data-aos-delay="80" data-aos-duration="800">
                         <div class="details">
@@ -196,7 +196,7 @@
                 <!-- Workshop -->
                 <div class="row row-3">
                     <div class="icons icons-3">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
                         <div class="details">
@@ -219,7 +219,7 @@
                 <!-- Mock Pitch -->
                 <div class="row row-4">
                     <div class="icons icons-4">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-4" data-aos-delay="100" data-aos-duration="800">
                         <div class="details">
@@ -243,7 +243,7 @@
                 <!-- Final Pitch -->
                 <div class="row row-5">
                     <div class="icons icons-5">
-                        <img src="./src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-5" data-aos-delay="110" data-aos-duration="800">
                         <div class="details">
