home page updated

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!-- Awareness -->
                 <div class="cards">
                     <div class="aims-img-cont">
-                        <img src="/src/assets/svg/Awareness.svg" alt="" height="100%" width="100%" />
+                        <img src="./src/assets/images/awareness.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
                         <h4>Awareness</h4>
@@ -119,7 +119,7 @@
                 <!-- Motivation -->
                 <div class="cards">
                     <div class="aims-img-cont">
-                        <img src="/src/assets/svg/Motivation2.svg" alt="" height="100%" width="100%" />
+                        <img src="./src/assets/images/motivation.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
                         <h4>Motivation</h4>
@@ -133,7 +133,7 @@
                 <!-- Mentorship -->
                 <div class="cards">
                     <div class="aims-img-cont">
-                        <img src="/src/assets/svg/Mentorship.svg" alt="" height="100%" width="100%" />
+                        <img src="./src/assets/images/mentorship.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
                         <h4>Mentorship</h4>
@@ -147,7 +147,7 @@
                 <!-- Guidance -->
                 <div class="cards">
                     <div class="aims-img-cont">
-                        <img src="/src/assets/svg/Guidance.svg" alt="" height="100%" width="100%" />
+                        <img src="./src/assets/images/guidance.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
                         <h4>Guidance & Support</h4>
@@ -193,14 +193,21 @@
             <h1 data-aos="fade-up">Testimonials </h1>
             <div class="testim-wrapper " data-aos="fade-up">
                 <div class="testim-image">
-                    <img id="testim-img" src="/src/assets/images/testim.jpg" />
+                    <img id="testim-img" src="./src/assets/images/Testimony.JPG" />
                 </div>
                 <div class="testim-text-wrapper">
                     <q>
-                        We believe that people can be truly happy on the outside only after reaching happiness within.
+                        This is a great overview of getting started in developing concepts for new ventures. With
+                        decades of innovation experience, more than half in startups, this was a worthwhile investment
+                        of time. I'm planning on one of several new opportunities, including consulting with several
+                        startups, and want to fill in what I needed to understand, renew an understanding of key
+                        concepts and re-align to best practices. I'd recommend to go Shark tank of Shah & Anchor college
+                        program to anyone diving into entprepreneurship.
+
+
                     </q>
-                    <h4>Manav Khimani</h4>
-                    <p>CEO and Co-Founder</p>
+                    <h4>Rushikesh Gaikwad</h4>
+                    <p>Shark Tank 2020 participant</p>
                 </div>
             </div>
         </section>
@@ -310,7 +317,7 @@
     </footer>
 
 </body>
-<script src="/src/javascript/script.js"></script>
+<script src="./src/javascript/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
