--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="nav-header">
             <div class="logo">
                 <a href="./index.html">
-                <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
-            </a>
+                    <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%"
+                        height="100%" />
+                </a>
             </div>
             <div id="toggle" class="nav-toggle" onclick="nav_toggle()">
                 <span></span><span></span><span></span>
@@ -228,21 +229,19 @@
                 </div>
                 <div class="contact-form">
                     <form action="https://zbba6bfl4k.execute-api.ap-south-1.amazonaws.com/dev/contact/" method="POST">
-                        <input class="form-input" id="name" type="text" for="name"
-                            placeholder="Name" required>
+                        <input class="form-input" id="name" type="text" for="name" placeholder="Name" required>
                         <!-- <label for="name" class="form-label">Name</label> -->
-                        <input class="form-input" id="email" type="email"
-                            for="email" placeholder="Email" required>
+                        <input class="form-input" id="email" type="email" for="email" placeholder="Email" required>
                         <!-- <label for="email" class="form-label">Email</label> -->
-                        <textarea class="form-inputarea" id="message" type="text"
-                            for="message" placeholder="Message" required></textarea>
+                        <textarea class="form-inputarea" id="message" type="text" for="message" placeholder="Message"
+                            required></textarea>
                         <!-- <label for="message" class="form-label">Message</label> -->
-                        <div id="recaptcha" class="g-recaptcha"
-                            data-sitekey="6Lekeo0gAAAAANQn_eAw4gHugk-P_V8sdFex94e9"></div>
-                        <button class="contact-form-button" id="submitbtn" name="submit" type="button" >
+                        <div id="recaptcha" class="g-recaptcha" data-sitekey="6Lekeo0gAAAAANQn_eAw4gHugk-P_V8sdFex94e9">
+                        </div>
+                        <button class="contact-form-button" id="submitbtn" name="submit" type="button">
                             Submit
                         </button>
-                        
+
 
                     </form>
                 </div>
@@ -311,7 +310,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and inovation cell | SAKEC
+                entreupreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
