--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -34,6 +34,7 @@
             <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
             <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
             <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
+            <li> <a id="nav-a" href="./faq/index.html">FAQ</a> </li>
         </ul>
     </nav>
 
