--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
         <!-- EVENTS SECTION -->
-
+        <!-- 
         <section class="Roles" id="events">
             <h1 class="head2">Events</h1>
             <div class="event-row">
@@ -187,7 +187,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- TESTIMONY SECTION  -->
         <section class="testimony" id="testimony">
@@ -241,8 +241,6 @@
                         <button class="contact-form-button" id="submitbtn" name="submit" type="button">
                             Submit
                         </button>
-
-
                     </form>
                 </div>
             </div>
