--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li> <a href="#home">Home </a> </li>
                 <li> <a href="#about">About us </a> </li>
                 <li> <a href="#aims">Aims</a> </li>
-                <li> <a href="#events">Events </a> </li>
+                <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
                 <li> <a href="#contactus">Contact Us </a> </li>
                 <li> <a href="./team/index.html">Our Team</a> </li>
