events page fixed

--- a/events/index.html
+++ b/events/index.html
@@ -39,7 +39,7 @@
 
     <div class="blog-card">
         <div class="meta">
-            <div class="photo"><img src='./img/eol.jpeg'></div>
+            <div class="photo" style="background-image: url('./img/podcast.jpeg');"></div>
             <!--<ul class="details">
                 <li class="author"><a href="#">John Doe</a></li>
                 <li class="date">Aug. 24, 2015</li>
@@ -64,7 +64,7 @@
     </div>
     <div class="blog-card alt">
         <div class="meta">
-            <div class="photo"><img src='./img/st.png'></div>
+            <div class="photo" style="background-image: url('./img/sharktank.png'); background-color: aqua;"></div>
             <!--<ul class="details">
                 <li class="author"><a href="#">Jane Doe</a></li>
                 <li class="date">July. 15, 2015</li>
@@ -89,7 +89,7 @@
     </div>
     <div class="blog-card">
         <div class="meta">
-            <div class="photo"><img src='./img/ff.png'></div>
+            <div class="photo" style="background-image: url('./img/foodfiesta.png');" ></div>
             <!--<ul class="details">
                 <li class="author"><a href="#">John Doe</a></li>
                 <li class="date">Aug. 24, 2015</li>
@@ -115,7 +115,7 @@
 
     <div class="blog-card alt">
         <div class="meta">
-            <div class="photo"><img src='./img/we.png'></div>
+            <div class="photo" style="background-image: url('./img/women.jpeg');"></div>
             <!--
             <ul class="details">
                 <li class="author"><a href="#">John Doe</a></li>
@@ -143,7 +143,7 @@
 
     <div class="blog-card ">
         <div class="meta">
-            <div class="photo"><img src='./img/beachcl.jpg'></div>
+            <div class="photo" style="background-image: url('./img/beach.jpeg');"></div>
             <!--<ul class="details">
                 <li class="author"><a href="#">Jane Doe</a></li>
                 <li class="date">July. 15, 2015</li>
