event img updated and faq nav bar fix

--- a/events/index.html
+++ b/events/index.html
@@ -39,7 +39,7 @@
 
     <div class="blog-card">
         <div class="meta">
-            <div class="photo" style="background-image: url('./img/podcast.jpeg');"></div>
+            <div class="photo" style="background-image: url('./img/podcast.png');"></div>
             <!--<ul class="details">
                 <li class="author"><a href="#">John Doe</a></li>
                 <li class="date">Aug. 24, 2015</li>
