home page responsive fix

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.3528973387993!2d72.90946941490083!3d19.048215687103834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c5f39a7d77d1%3A0x9ebbdeaea9ec24ae!2sShah%20%26%20Anchor%20Kutchhi%20Engineering%20College!5e0!3m2!1sen!2sin!4v1655890311868!5m2!1sen!2sin"
                         width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="contact-form">
                     <form action="https://zbba6bfl4k.execute-api.ap-south-1.amazonaws.com/dev/contact/" method="POST">
