--- a/events/index.html
+++ b/events/index.html
@@ -58,7 +58,7 @@
 
             <p> E-Cell SAKEC is pleased to bring to you SAKEC'S very first active podcast series, 'Epitome of Leaders' where we invite thriving Entrepreneurs to share their story and inspire us to be our most ideal selves.</p>
             <p class="read-more">
-                <!-- <a href="#">Read More</a> -->
+                <!-- <a href="#">Learn More</a> -->
             </p>
         </div>
     </div>
@@ -83,7 +83,7 @@
             <p>E-Cell SAKEC organised Shark Tank even before Shark Tank was officially aired in India in 2020 where we encouraged students to start their own business venture as well as invited budding startups and gave them a chance to pitch their startups
                 to investors and have a chance to secure investments.</p>
             <p class="read-more">
-                <!-- <a href="#">Read More</a> -->
+                <a href="../projectpillar/index.html" target="_blank">Visit Website</a>
             </p>
         </div>
     </div>
@@ -108,7 +108,7 @@
 
             <p> Food Fiesta, is a foodie and friendly event that offers you a platform to pitch and sell your food products as a one-on-one business individual.</p>
             <p class="read-more">
-                <!-- <a href="#">Read More</a> -->
+                <a href="../foodfiesta/index.html" target="_blank">Visit Website</a>
             </p>
         </div>
     </div>
