--- a/faq/index.html
+++ b/faq/index.html
@@ -23,7 +23,7 @@
         <img src="./img/Ecell-Sakec-Logo.svg" alt="logo" class="logo">
       </a>
         <ul class="links">
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           
 
         </ul>
