project pillar countdown added

--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -23,7 +23,7 @@
         <img src="./img/Ecell-Sakec-Logo.svg" alt="logo" class="logo">
       </a>
         <ul class="links">
-          <li> <a id="nav-a" href="../index.html#home">Home </a> </li>
+          <li> <a id="nav-a" href="../../index.html">Home </a> </li>
             <li> <a id="nav-a" href="../index.html#about">About </a> </li>
             <li> <a id="nav-a" href="../index.html#incentives">Incentives</a> </li>
             <li> <a id="nav-a" href="../index.html#sponsors">Sponsors </a> </li>
