--- a/events/index.html
+++ b/events/index.html
@@ -21,7 +21,7 @@
             <li> <a href="../index.html#home">Home </a> </li>
             <li> <a href="../index.html#about">About us </a> </li>
             <li> <a href="../index.html#aims">Aims</a> </li>
-            <li> <a href="./events/index.html">Events </a> </li>
+            <li> <a href="#">Events </a> </li>
             <li> <a href="../index.html#testimony">Testimony</a> </li>
             <li> <a href="../index.html#contactus">Contact Us </a> </li>
             <li> <a href="../team/index.html">Our Team</a> </li>
