--- a/events/index.html
+++ b/events/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -199,7 +200,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>For other queries :</h4>
+                    <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
                         <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
@@ -228,7 +229,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and inovation cell | SAKEC
+                entreupreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
