consistent navbar and footer and cleaned css
consistent navbar and footer across home page , events page , faq and faq project pillar page.

--- a/faq/index.html
+++ b/faq/index.html
@@ -2,25 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ECELL | FAQ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-       <!--jQuery CDN-->
-       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-       integrity=
-"sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-       crossorigin="anonymous">
-   </script>
-    <title>ECELL | FAQ</title>
-    <link href="./css/style.css" rel="stylesheet">
+
+    <!-- page specific imports -->
+    <link rel="stylesheet" href="./css/style.css">
+    <!--jQuery CDN-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
         <a href="../index.html">
-        <img src="./img/Ecell-Sakec-Logo.svg" alt="logo" class="logo">
+        <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
       </a>
         <ul class="links">
           <li><a href="../index.html">Home</a></li>
@@ -39,7 +36,7 @@
 
     <div class="container my-5 ">
         <row>
-            <h1 class="text-center my-2 my-md-4">FAQ</h1>
+            <h1 class="text-center my-2 my-md-4">E-CELL FAQ</h1>
         </row>
         <div class="row">
             <div class="col-md-12 col-lg-6">
@@ -140,86 +137,84 @@
   
                           <h2 class="accordion-header" id="questionEight">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                              8.	--WORK IN PROGRESS--
+                              8. Not sure which team to join ? 
                             </button>
                           </h2>
                           <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="questionEight" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                            </div>
+                             <a href="https://wa.me/919082450761" target="_blank">Click here for clarification on team information.</a>                             </div>
                           </div>
                       </div>
                   </div>
             </div>
     </div>
     </div>
+
     <footer id="contact">
-        <div class="footer-wrapper">
-            <h1>Get in touch with us</h1>
-            <div class="contact-wrapper">
-                <div class="contact-card">
-                    <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
-                    <div class="email-area">
-                        <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in"
-                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
-                    </div>
-                    <div class="phone-area">
-                        <i class="bi bi-telephone-fill"></i>
-                        <p>+91 93223 19066</p>
-                    </div>
-                </div>
+      <div class="footer-wrapper">
+          <h1>Get in touch with us</h1>
+          <div class="contact-wrapper">
+              <div class="contact-card">
+                  <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
+                  <div class="email-area">
+                      <i class="bi bi-envelope-fill"></i>
+                      <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                  </div>
+                  <div class="phone-area">
+                      <i class="bi bi-telephone-fill"></i>
+                      <p>+91 93223 19066</p>
+                  </div>
+              </div>
 
-                <div class="contact-card">
-                    <h4>Ashish Shetty (E-Cell Council head)</h4>
-                    <div class="contact-content">
-                        <div class="email-area">
-                            <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in"
-                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
-                        </div>
-                        <div class="phone-area">
-                            <i class="bi bi-telephone-fill"></i>
-                            <p>+91 77150 22166</p>
-                        </div>
-                    </div>
+              <div class="contact-card">
+                  <h4>Ashish Shetty (E-Cell Council head)</h4>
+                  <div class="contact-content">
+                      <div class="email-area">
+                          <i class="bi bi-envelope-fill"></i>
+                          <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                      </div>
+                      <div class="phone-area">
+                          <i class="bi bi-telephone-fill"></i>
+                          <p>+91 77150 22166</p>
+                      </div>
+                  </div>
 
-                </div>
+              </div>
 
-                <div class="contact-card">
-                    <h4>For other queries :</h4>
-                    <div class="email-area">
-                        <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
-                    </div>
-                    <div class="phone-area">
-                        <i class="bi bi-telephone-fill"></i>
-                        <p>+91 93223 19066</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-ecell">
-            <div class="social-media">
-                <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
-                    <i class="bi bi-instagram "></i>
-                </a>
-                <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
-                    <!-- <a href=""></a> -->
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
-                    <i class="bi bi-youtube"></i>
-                </a>
-                <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-            </div>
-            <h5>
-                entreupreneurship and inovation cell | SAKEC
-            </h5>
-        </div>
-    </footer>
+              <div class="contact-card">
+                  <h4>For Other Queries Contact Us At :</h4>
+                  <div class="email-area">
+                      <i class="bi bi-envelope-fill"></i>
+                      <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
+                  </div>
+                  <div class="phone-area">
+                      <i class="bi bi-telephone-fill"></i>
+                      <p>+91 93223 19066</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="footer-ecell">
+          <div class="social-media">
+              <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
+                  <i class="bi bi-instagram "></i>
+              </a>
+              <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
+                  <!-- <a href=""></a> -->
+                  <i class="bi bi-facebook"></i>
+              </a>
+              <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
+                  <i class="bi bi-youtube"></i>
+              </a>
+              <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
+                  <i class="bi bi-linkedin"></i>
+              </a>
+          </div>
+          <h5>
+              entreupreneurship and innovation cell | SAKEC
+          </h5>
+      </div>
+  </footer>
  <script>
         if (location.hash !== null && location.hash !== "") {
             $(location.hash).children(".accordion-button").removeClass("collapsed");
