home page testim text size changes

--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
                         width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="contact-form">
-                    <form action="https://zbba6bfl4k.execute-api.ap-south-1.amazonaws.com/dev/contact/" method="POST">
+                    <form class="contact-form" action="https://zbba6bfl4k.execute-api.ap-south-1.amazonaws.com/dev/contact/" method="POST">
                         <input class="form-input" id="name" type="text" for="name" placeholder="Name" required>
                         <!-- <label for="name" class="form-label">Name</label> -->
                         <input class="form-input" id="email" type="email" for="email" placeholder="Email" required>
@@ -208,7 +207,6 @@
                             Submit
                         </button>
                     </form>
-                </div>
             </div>
         </section>
 
