--- a/faq/index.html
+++ b/faq/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
     <!-- page specific imports -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../common/css/footer.css">
+    <link rel="stylesheet" href="../common/css/nav.css">
+    <link rel="stylesheet" href="../common/css/reset.css">
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </head>
@@ -40,7 +42,7 @@
         </row>
         <div class="row">
             <div class="col-md-12 col-lg-6">
-                <img src="./img/Standup meeting-bro.png" class="img-fluid" alt="picture of team meeting">
+                <img src="../common/img/Standup meeting-bro.png" class="img-fluid" alt="picture of team meeting">
             </div>
             <div class="col-md-12 col-lg-6">
                 <div class="accordion" id="accordionExample">
