winners  section background changed

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -81,16 +81,15 @@
       <div class="spon-in">
           <ul>
             <li>
-              <a href="#" target="_blank"><img src="./medical_care_logo_template_social_media_-removebg-preview.png" alt="" />
-              <img src="./medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
+              <a href="#" target="_blank"><img src="./medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
           </li>
               <li>
                   <a href="https://www.millionairekids.club/" target="_blank"><img src="./Copy_of_Millionaire_Kids_Club_2.png" alt="" />
-                  <img src="./white.png" alt="" /></a>
+               </a>
               </li>
               <li>
                 <a href="#" target="_blank"><img src="./logo2.png" alt="" />
-                <img src="./logo2.png" alt="" /></a>
+               </a>
             </li>
             
           </ul>
@@ -264,8 +263,9 @@
 </section>
   -->
   <section class="Winner" id="Winners">
+
     <h1 class="title">Our Winners</h1>
-  <hr />
+  
     <div class="container">
      
       <div class="card">
