footer removed phone number from other query

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
                             <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
-                            <i class="bi bi-telephone-fill"></i>
-                            <p>+91 93223 19066</p>
+                            <!-- <i class="bi bi-telephone-fill"></i> -->
+                            <!-- <p>+91 93223 19066</p> -->
                         </div>
                     </div>
                 </div>
