--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icon/e_cell_logo.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Pillar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
@@ -35,7 +36,8 @@
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
-                <li> <a id="nav-a" href="./faq/index.html">FAQ</a> </li>
+                <li> <a id="nav-a" href="../projectpillar/faq/index.html" target="_blank"
+                        rel="noopener noreferrer">FAQ</a> </li>
             </ul>
         </div>
     </nav>
@@ -43,16 +45,39 @@
     <!-- Content Area -->
 
     <article id="article">
+
+        <!-- Hero Area -->
+
         <section id="home">
+
+            <!-- Hero Image -->
+
             <div class="home-wrapper">
                 <div class="hero-img">
                     <img src="./src/assets/svg/Project-Pillar-Logo.svg" alt="" height="100%" width="100%">
                 </div>
+
+                <!-- Count Down to Event  -->
+
                 <div class="counter-wrapper">
-                    <h2>Registration <span>Starts In</span></h2>
+                    <h2> <span>Starts In</span></h2>
                     <div class="container">
                         <div class="container-segment">
-                            <div class="segment-title">Hours</div>
+                            <!-- Days Card -->
+                            <div class="segment">
+                                <div class="flip-card" data-days-tens>
+                                    <div class="top">3</div>
+                                    <div class="bottom">3</div>
+                                </div>
+                                <div class="flip-card" data-days-ones>
+                                    <div class="top">0</div>
+                                    <div class="bottom">0</div>
+                                </div>
+                            </div>
+                            <div class="segment-title">Days</div>
+                        </div>
+                        <!-- Hours Card -->
+                        <div class="container-segment">
                             <div class="segment">
                                 <div class="flip-card" data-hours-tens>
                                     <div class="top">2</div>
@@ -63,9 +88,12 @@
                                     <div class="bottom">4</div>
                                 </div>
                             </div>
+                            <div class="segment-title">hours</div>
                         </div>
+
+
                         <div class="container-segment">
-                            <div class="segment-title">Minutes</div>
+
                             <div class="segment">
                                 <div class="flip-card" data-minutes-tens>
                                     <div class="top">0</div>
@@ -76,9 +104,11 @@
                                     <div class="bottom">0</div>
                                 </div>
                             </div>
+                            <div class="segment-title">minutes</div>
                         </div>
+
                         <div class="container-segment">
-                            <div class="segment-title">Seconds</div>
+
                             <div class="segment">
                                 <div class="flip-card" data-seconds-tens>
                                     <div class="top">0</div>
@@ -89,12 +119,22 @@
                                     <div class="bottom">0</div>
                                 </div>
                             </div>
+                            <div class="segment-title">seconds</div>
                         </div>
+
                     </div>
+                </div>
+
+                <!-- Scroll down Animated -->
+
+                <div class="scroll-down">
+                    <a href="#timeline">Scroll Down To Register</a>
+                    <div class="mouse"></div>
                 </div>
             </div>
 
 
+            <!-- Background Animation -->
 
             <ul class="circles">
 
@@ -135,7 +175,8 @@
                 <!-- Make connections with VCs -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/vuesax/people.svg" alt="" width="100%" height="100%">
+                        <img src="./src/assets/svg/incentitives/Finding brilliant ideas-pana.svg" alt="" width="100%"
+                            height="100%">
                     </div>
                     <div class="cards-details">
                         <h4>Make connections with VCs</h4>
@@ -150,7 +191,7 @@
                 <!-- Secure funding -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/vuesax/bank.svg" alt="" width="100%" height="100%">
+                        <img src="./src/assets/svg/incentitives/Sponsor-pana.svg" alt="" width="100%" height="100%">
                     </div>
                     <div class="cards-details">
                         <h4>Secure funding</h4>
@@ -163,7 +204,8 @@
                 <!-- Consult with Mentors -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/vuesax/verify.svg" alt="" width="100%" height="100%">
+                        <img src="./src/assets/svg/incentitives/Business deal-pana.svg" alt="" width="100%"
+                            height="100%">
                     </div>
                     <div class="cards-details">
                         <h4>Consult with Mentors</h4>
@@ -176,7 +218,8 @@
                 <!-- Secure your startup -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/vuesax/Group 2.svg" alt="" width="100%" height="100%">
+                        <img src="./src/assets/svg/incentitives/At the office-pana.svg" alt="" width="100%"
+                            height="100%">
                     </div>
                     <div class="cards-details">
                         <h4>Secure your incubators</h4>
@@ -199,7 +242,9 @@
             <h1 data-aos="fade-up">Timeline</h1>
             <div class="timeline-wrapper" data-aos="fade-up" data-aos-delay="100">
                 <div class="center-line"></div>
+
                 <!-- Pre Registration -->
+
                 <div class="row row-1">
                     <div class="icons icons-1">
                         <img src="./src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
@@ -216,10 +261,14 @@
                             and essential
                             documentation.
                         </p>
-                        <div class="button"><a href="#" class="btn">Register Now</a> </div>
+                        <div class="button"><a href="https://ppillar.pages.dev/" target="_blank"
+                                rel="noopener noreferrer" class="btn">Register
+                                Now</a> </div>
                     </section>
                 </div>
+
                 <!-- Verification -->
+
                 <div class="row row-2">
                     <div class="icons icons-2">
                         <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
@@ -242,7 +291,9 @@
               </a> </div> -->
                     </section>
                 </div>
+
                 <!-- Workshop -->
+
                 <div class="row row-3">
                     <div class="icons icons-3">
                         <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
@@ -265,7 +316,9 @@
               </a> </div> -->
                     </section>
                 </div>
+
                 <!-- Mock Pitch -->
+
                 <div class="row row-4">
                     <div class="icons icons-4">
                         <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
@@ -289,7 +342,9 @@
               </a> </div> -->
                     </section>
                 </div>
+
                 <!-- Final Pitch -->
+
                 <div class="row row-5">
                     <div class="icons icons-5">
                         <img src="./src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
@@ -316,8 +371,6 @@
                       </a> </div> -->
                     </section>
                 </div>
-
-
             </div>
         </section>
     </article>
@@ -363,10 +416,10 @@
                         <i class="bi bi-envelope-fill"></i>
                         <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
                     </div>
-                    <div class="phone-area">
+                    <!-- <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
-                        <p>+91 93223 19066</p>
-                    </div>
+                         <p>+91 93223 19066</p>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -387,14 +440,14 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and inovation cell | SAKEC
+                entreupreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
     <!-- Scripts -->
     <script src="./src/javascript/script.js"></script>
     <script src="./src/javascript/countdown.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <script>
         AOS.init();
     </script>
