our team removed from nav bar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
                 <li> <a href="#contactus">Contact Us </a> </li>
-                <li> <a href="./team/index.html">Our Team</a> </li>
+                <!-- <li> <a href="./team/index.html">Our Team</a> </li> -->
           
 
         </ul>
