--- a/events/index.html
+++ b/events/index.html
@@ -25,7 +25,7 @@
             <li> <a href="#">Events </a> </li>
             <li> <a href="../index.html#testimony">Testimony</a> </li>
             <li> <a href="../index.html#contactus">Contact Us </a> </li>
-            <li> <a href="../team/index.html">Our Team</a> </li>
+            <!-- <li> <a href="../team/index.html">Our Team</a> </li> -->
 
 
 
