sakec logo added

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -31,6 +31,7 @@
 
   <nav>
     <input id="nav-toggle" type="checkbox">
+    <a href="https://www.shahandanchor.com/metsmartcampus/default.aspx" target="_blank"><img src="../common/img/sakec_logo_WHITE.png" alt="logo" class="logo1"></a>
     <a href="../index.html"><img src="./e_cell_logo_white.png" alt="logo" class="logo"></a>
     <ul class="links">
       <li><a href="../index.html">Home</a></li>
