navbar sakec logo added across all except pp page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <a href="../index.html">
-        <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
-      </a>
+        <div>
+            <a href="https://www.shahandanchor.com/home/" target="_blank">
+                <img src="./common/img/sakec_logo_BLACK.png" alt="logo" class="logo  sakec-logo">
+              </a>
+            <a href="../index.html">
+                <img src="./common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
+              </a>
+            
+
+        </div>
+       
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
                 <li> <a href="#about">About us </a> </li>
