--- a/events/index.html
+++ b/events/index.html
@@ -15,9 +15,17 @@
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <a href="../index.html">
-            <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
-        </a>
+        <div>
+            <a href="https://www.shahandanchor.com/home/" target="_blank">
+                <img src="../common/img/sakec_logo_BLACK.png" alt="logo" class="logo  sakec-logo">
+              </a>
+            <a href="../index.html">
+                <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
+              </a>
+            
+
+        </div>
+       
         <ul class="links">
             <li> <a href="../index.html#home">Home </a> </li>
             <li> <a href="../index.html#about">About us </a> </li>
@@ -31,11 +39,11 @@
 
         </ul>
         <label for="nav-toggle" class="icon-burger">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </label>
-    </nav>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </label>
+      </nav>
 
 
     <div class="blog-card">
