--- a/team/index.html
+++ b/team/index.html
@@ -19,9 +19,17 @@
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <a href="../index.html">
-        <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
-      </a>
+        <div>
+            <a href="https://www.shahandanchor.com/home/" target="_blank">
+                <img src="../common/img/sakec_logo_BLACK.png" alt="logo" class="logo  sakec-logo">
+              </a>
+            <a href="../index.html">
+                <img src="../common/img/e_cell_logo_BLACK.png" alt="logo" class="logo">
+              </a>
+            
+
+        </div>
+       
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
                 <li> <a href="#about">About us </a> </li>
@@ -39,6 +47,7 @@
           <div class="line"></div>
         </label>
       </nav>
+   
     <section class="flex-center">
         <div class="slide-bg" data-parallax>
             <video id="myVideo" src="gallery/teamvid.mp4" loop muted autoplay></video>
